--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -303,6 +303,7 @@ jobs:
           sudo ufw allow in on cni0
           sudo ufw allow out on cni0
           sudo ufw default allow routed
+          sudo iptables -P FORWARD ACCEPT
 
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm
           sudo kubeadm init --config=ci/cached-builds/kubeadm.yaml
