--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,5 +1,5 @@
 ---
-"name": "Build Notebooks (pr)"
+"name": "Docs (release notes)"
 "on":
   "push":
   "pull_request":
@@ -7,6 +7,9 @@
 
 permissions:
   contents: read
+
+env:
+  poetry_version: '1.8.3'
 
 jobs:
   generate-releasenotes:
