add github action

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -57,4 +57,5 @@ jobs:
 
       - name: Run the release notes script
         run: |
+          set -Eeuxo pipefail
           ci/package_versions.py | tee ${GITHUB_STEP_SUMMARY}
