add github action

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -58,4 +58,4 @@ jobs:
       - name: Run the release notes script
         run: |
           set -Eeuxo pipefail
-          ci/package_versions.py | tee ${GITHUB_STEP_SUMMARY}
+          poetry run ci/package_versions.py | tee ${GITHUB_STEP_SUMMARY}
