RHOAIENG-26279: refactor EXTRA_PODMAN_BUILD_ARGS computation logic to simplify and improve readability

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -306,15 +306,17 @@ jobs:
         run: |
           import os
 
-          EXTRA_PODMAN_BUILD_ARGS = []
+          args = []
           if "${{ inputs.platform }}" == "linux/s390x":
               # workaround for known issue https://github.com/zeromq/libzmq/pull/4486
               # In qemu-user, CACHELINE_SIZE probe is undefined
-              EXTRA_PODMAN_BUILD_ARGS.append("--build-arg=CXXFLAGS=-Dundefined=64")
+              args.append("--build-arg=CXXFLAGS=-Dundefined=64")
               # many wheels are built from sources, so enable parallel make builds
-              EXTRA_PODMAN_BUILD_ARGS.append("--build-arg=MAKEFLAGS=-j$(nproc)")
+              args.append("--build-arg=MAKEFLAGS=-j$(nproc)")
+
+          EXTRA_PODMAN_BUILD_ARGS = ' '.join(args)
           with open(os.environ["GITHUB_OUTPUT"], "wt") as fp:
-              print(f"EXTRA_PODMAN_BUILD_ARGS={' '.join(EXTRA_PODMAN_BUILD_ARGS)}", file=fp)
+              print(f"{EXTRA_PODMAN_BUILD_ARGS=}", file=fp)
 
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request
