--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -310,9 +310,9 @@ jobs:
           if "${{ inputs.platform }}" == "linux/s390x":
               # workaround for known issue https://github.com/zeromq/libzmq/pull/4486
               # In qemu-user, CACHELINE_SIZE probe is undefined
-              args.append("--build-arg=CXXFLAGS=-Dundefined=64")
+              args.append("--env=CXXFLAGS=-Dundefined=64")
               # many wheels are built from sources, so enable parallel make builds
-              args.append("--build-arg=MAKEFLAGS=-j$(nproc)")
+              args.append("--env=MAKEFLAGS=-j$(nproc)")
 
           EXTRA_PODMAN_BUILD_ARGS = ' '.join(args)
           with open(os.environ["GITHUB_OUTPUT"], "wt") as fp:
