--- a/.github/workflows/piplock-renewal.yaml
+++ b/.github/workflows/piplock-renewal.yaml
@@ -65,6 +65,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          # https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
+          cache: 'pipenv'
+          cache-dependency-path: '**/*-python-${{ matrix.python-version }}/Pipfile'
 
       - name: Install pipenv
         run: pip install pipenv
