--- a/.github/workflows/piplock-renewal.yaml
+++ b/.github/workflows/piplock-renewal.yaml
@@ -65,12 +65,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          # https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
-          cache: 'pipenv'
-          cache-dependency-path: '**/*-python-${{ matrix.python-version }}/Pipfile'
 
       - name: Install pipenv
         run: pip install pipenv
+
+      - name: Cache pip packages for pipenv lock
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-piplock-renewal-${{ matrix.python-version }}-${{ hashFiles(format('**/*-python-{0}/Pipfile', matrix.python-version)) }}
+          restore-keys: |
+            ${{ runner.os }}-piplock-renewal-${{ matrix.python-version }}-
 
       - name: Run make refresh-pipfilelock-files
         run: |
